--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Boolando</title>
 </head>
 <body>
+    <header>
+        <div class="background-head">
+            <div class="cont-head">
+                <nav class="sex-selector">
+                    <ul>
+                        <li><a href="#">Donna</a></li>
+                        <li><a href="#">Uomo</a></li>
+                        <li><a href="#">Bambini</a></li>
+                    </ul>
+                </nav>
+                <div class="logo"><img src="./img/boolean-logo.png" alt="logo-top"></div>
+                <div class="">
+                    <div class="menu">
+                        <span class="icon"><a href="#"><i class="fa-solid fa-user"></i></a></span>
+                        <span class="icon"><a href="#"><i class="fa-solid fa-heart"></i></a></span>
+                        <span class="icon"><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
     
+    </main>
 </body>
 </html>
