--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Boolando</title>
 </head>
+
 <body>
     <header>
         <div class="background-head">
@@ -31,7 +35,112 @@
         </div>
     </header>
     <main>
-    
+        <div class="container">
+            <div class="cont-img">
+                <img src="./img/1.webp" alt="img1" class="front">
+                <img src="./img/1b.webp" alt="img1" class="back">
+                <div class="descr">
+                    <ul>
+                        <li><span class="brand">Levi's</span></li>
+                        <li><span class="article">RELAXED FIT TEE UNISEX</span></li>
+                        <li><span class="color-price">14.99 € </span><span class="realprice"> 29.99</span></li>
+                    </ul>
+                </div>
+                <div class="heart">&hearts;</div>
+                <div class="discount">-50%</div>
+                <div class="bio">Sostenibilità</div>
+            </div>
+            <div class="cont-img">
+                <img src="./img/2b.webp" alt="img1" class="back">
+                <img src="./img/2.webp" alt="img1" class="front">
+                <div class="descr">
+                    <ul>
+                        <li><span class="brand">Guess</span></li>
+                        <li><span class="article">ROSES TEE</span></li>
+                        <li><span class="color-price">20.99 € </span><span class="realprice"> 29.99</span></li>
+                    </ul>
+                </div>
+                <div class="heart">&hearts;</div>
+                <div class="discount">-30%</div>
+            </div>
+            <div class="cont-img">
+                <img src="./img/3b.webp" alt="img1" class="back">
+                <img src="./img/3.webp" alt="img1" class="front">
+                <div class="descr">
+                    <ul>
+                        <li><span class="brand">Come Zucchero Filato</span></li>
+                        <li><span class="article">VOGLIA DI COLORI PASTELLO</span></li>
+                        <li><span class="color-price">129.99 € </span><span class="realprice"> 184.99</span></li>
+                    </ul>
+                </div>
+                <div class="heart">&hearts;</div>
+                <div class="discount">-30%</div>
+            </div>
+            <div class="cont-img">
+                <img src="./img/4b.webp" alt="img1" class="back">
+                <img src="./img/4.webp" alt="img1" class="front">
+                <div class="descr">
+                    <ul>
+                        <li><span class="brand">Levi's</span></li>
+                        <li><span class="article">TEE UNISEX</span></li>
+                        <li><span class="color-price">14.99 € </span><span class="realprice"> 29.99</span></li>
+                    </ul>
+                </div>
+                <div class="heart">&hearts;</div>
+                <div class="discount">-50%</div>
+                <div class="bio">Sostenibilità</div>
+            </div>
+            <div class="cont-img">
+                <img src="./img/5b.webp" alt="img1" class="back">
+                <img src="./img/5.webp" alt="img1" class="front">
+                <div class="descr">
+                    <ul>
+                        <li><span class="brand">Maya Deluxe</span></li>
+                        <li><span class="article">STRIPE BODICE</span></li>
+                        <li><span class="color-price">99.99 € </span></li>
+                    </ul>
+                </div>
+                <div class="heart">&hearts;</div>
+            </div>
+            <div class="cont-img">
+                <img src="./img/6b.webp" alt="img1" class="back">
+                <img src="./img/6.webp" alt="img1" class="front">
+                <div class="descr">
+                    <ul>
+                        <li><span class="brand">Esprit</span></li>
+                        <li><span class="article">MAGLIONE - BLACK</span></li>
+                        <li><span class="color-price">29.99 € </span></li>
+                    </ul>
+                </div>
+                <div class="bio" id="bio-b">Sostenibilità</div>
+                <div class="heart">&hearts;</div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div class="cont-foot">
+            <div class="info">
+                <h2>Boolando s.r.l</h2>
+                <div class="foot-text">
+                    <ul>
+                        <li><a href="#">Informazioni legali</a></li>
+                        <li><a href="#">Informativa sulla privacy</a></li>
+                        <li><a href="#">Diritto di recesso</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="social">
+                <div class="foot-title">Trovaci anche su</div>
+                <div>
+                    <span class="icon-social"><i class="fa-brands fa-twitter-square"></i></span>
+                    <span class="icon-social"><i class="fa-brands fa-facebook-square"></i></span>
+                    <span class="icon-social"><i class="fa-brands fa-instagram-square"></i></span>
+                    <span class="icon-social"><i class="fa-brands fa-pinterest-square"></i></span>
+                    <span class="icon-social"><i class="fa-brands fa-youtube-square"></i></span>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
