--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <main>
         <div class="container">
             <div class="cont-img">
-                <img src="./img/1.webp" alt="img1" class="front">
-                <img src="./img/1b.webp" alt="img1" class="back">
+                <div class="img1"><img src="./img/1.webp" alt="img1" class="front"></div>
+                <div class="img2"><img src="./img/1b.webp" alt="img1" class="back"></div>
                 <div class="descr">
                     <ul>
                         <li><span class="brand">Levi's</span></li>
@@ -51,8 +51,8 @@
                 <div class="bio">Sostenibilità</div>
             </div>
             <div class="cont-img">
-                <img src="./img/2b.webp" alt="img1" class="back">
-                <img src="./img/2.webp" alt="img1" class="front">
+                <div class="img1"><img src="./img/2b.webp" alt="img1" class="back"></div>
+                <div class="img2"><img src="./img/2.webp" alt="img1" class="front"></div>
                 <div class="descr">
                     <ul>
                         <li><span class="brand">Guess</span></li>
@@ -64,8 +64,10 @@
                 <div class="discount">-30%</div>
             </div>
             <div class="cont-img">
-                <img src="./img/3b.webp" alt="img1" class="back">
-                <img src="./img/3.webp" alt="img1" class="front">
+                <div class="img1"><img src="./img/3b.webp" alt="img1" class="back">
+                </div>
+                <div class="img2"><img src="./img/3.webp" alt="img1" class="front">
+                </div>
                 <div class="descr">
                     <ul>
                         <li><span class="brand">Come Zucchero Filato</span></li>
@@ -77,8 +79,8 @@
                 <div class="discount">-30%</div>
             </div>
             <div class="cont-img">
-                <img src="./img/4b.webp" alt="img1" class="back">
-                <img src="./img/4.webp" alt="img1" class="front">
+                <div class="img1"><img src="./img/4b.webp" alt="img1" class="back"></div>
+                <div class="img2"><img src="./img/4.webp" alt="img1" class="front"></div>
                 <div class="descr">
                     <ul>
                         <li><span class="brand">Levi's</span></li>
@@ -91,31 +93,34 @@
                 <div class="bio">Sostenibilità</div>
             </div>
             <div class="cont-img">
-                <img src="./img/5b.webp" alt="img1" class="back">
-                <img src="./img/5.webp" alt="img1" class="front">
-                <div class="descr">
-                    <ul>
-                        <li><span class="brand">Maya Deluxe</span></li>
-                        <li><span class="article">STRIPE BODICE</span></li>
-                        <li><span class="color-price">99.99 € </span></li>
-                    </ul>
+                <div class="img1"><img src="./img/5b.webp" alt="img1" class="back">
                 </div>
-                <div class="heart">&hearts;</div>
-            </div>
-            <div class="cont-img">
-                <img src="./img/6b.webp" alt="img1" class="back">
-                <img src="./img/6.webp" alt="img1" class="front">
-                <div class="descr">
-                    <ul>
-                        <li><span class="brand">Esprit</span></li>
-                        <li><span class="article">MAGLIONE - BLACK</span></li>
-                        <li><span class="color-price">29.99 € </span></li>
-                    </ul>
-                </div>
-                <div class="bio" id="bio-b">Sostenibilità</div>
-                <div class="heart">&hearts;</div>
-            </div>
+                <div class="img2"><img src="./img/5.webp" alt="img1" class="front">
+    </main>
+    <div class="descr">
+        <ul>
+            <li><span class="brand">Maya Deluxe</span></li>
+            <li><span class="article">STRIPE BODICE</span></li>
+            <li><span class="color-price">99.99 € </span></li>
+        </ul>
+    </div>
+    <div class="heart">&hearts;</div>
+    </div>
+    <div class="cont-img">
+        <div class="img1"><img src="./img/6b.webp" alt="img1" class="back">
         </div>
+        <div class="img2"><img src="./img/6.webp" alt="img1" class="front"></div>
+        <div class="descr">
+            <ul>
+                <li><span class="brand">Esprit</span></li>
+                <li><span class="article">MAGLIONE - BLACK</span></li>
+                <li><span class="color-price">29.99 € </span></li>
+            </ul>
+        </div>
+        <div class="bio" id="bio-b">Sostenibilità</div>
+        <div class="heart">&hearts;</div>
+    </div>
+    </div>
     </main>
     <footer>
         <div class="cont-foot">
@@ -131,7 +136,7 @@
             </div>
             <div class="social">
                 <div class="foot-title">Trovaci anche su</div>
-                <div>
+                <div class="cont-ico-social">
                     <span class="icon-social"><i class="fa-brands fa-twitter-square"></i></span>
                     <span class="icon-social"><i class="fa-brands fa-facebook-square"></i></span>
                     <span class="icon-social"><i class="fa-brands fa-instagram-square"></i></span>
